# cephalon-seraph

./: .gitignore  pyproject.toml
cephalon_seraph/: emoji_mapping.py  main.py
cephalon_seraph/commands/: items.py
